# eventdetector

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
.github/workflows/: unit_tests.yml
eventdetector/: __init__.py
eventdetector/data/: helpers.py  interval.py
eventdetector/metamodel/: __init__.py  meta_model.py  utils.py
eventdetector/models/: helpers.py  models_builder.py  models_trainer.py
eventdetector/optimization/: event_extraction_pipeline.py
eventdetector/plotter/: __init__.py  helpers.py  plotter.py
eventdetector/prediction/: prediction.py  utils.py
eventdetector_ts/: __init__.py
eventdetector_ts/data/: __init__.py  helpers.py  helpers_data.py  interval.py
eventdetector_ts/metamodel/: meta_model.py  utils.py
eventdetector_ts/models/: __init__.py  helpers_models.py  models_builder.py  models_trainer.py
eventdetector_ts/optimization/: algorithms.py  event_extraction_pipeline.py
eventdetector_ts/plotter/: __init__.py  helpers.py  plotter.py
eventdetector_ts/prediction/: prediction.py  utils.py
tests/: __init__.py
tests/data/: data_test_helpers.py  test_helpers.py  test_helpers_data.py  test_interval.py
tests/models/: models_test_helpers.py  test_helpers.py  test_helpers_models.py  test_models_builder.py
tests/optimization/: test_gaussian.py
