[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = [
    "eventdetector_ts/plotter/*",
    "eventdetector_ts/prediction/*",
    "eventdetector_ts/metamodel/*",
    "eventdetector_ts/optimization/event_extraction_pipeline.py",
    "eventdetector_ts/models/models_trainer.py"
]
source = ["eventdetector_ts"]

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "eventdetector_ts"
version = "1.0.7"
description = "This package provides an easy-to-use and efficient solution for event detection in time series data. It includes various functionalities and tools that enable users to apply our framework to their own data sets and customize the detection process according to their specific needs."
keywords = ["Event Detection", "Time Series", "Universal Approximation Theory", "Deep Learning", "Stacking Ensemble Learning"]
authors = [
    { name = "Menouar Azib", email = "menouar.azib@akkodis.com" }
]

maintainers = [
    { name = "Menouar Azib", email = "menouar.azib@akkodis.com" }
]
requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3", "Operating System :: OS Independent"]

dependencies = [
    "joblib",
    "matplotlib",
    "numpy",
    "pandas",
    "python_dateutil",
    "scikit_learn",
    "scipy",
    "seaborn",
    "sympy",
    "colorlog",
    "pydot",
    "pyqt5",
    "tqdm"
]

[project.urls]
"Homepage" = "https://github.com/menouarazib/eventdetector"
"Bug Tracker" = "https://github.com/menouarazib/eventdetector/issues"