[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = [
    "eventdetector_ts/plotter/*",
    "eventdetector_ts/prediction/*",
    "eventdetector_ts/metamodel/*",
    "eventdetector_ts/optimization/event_extraction_pipeline.py",
    "eventdetector_ts/models/models_trainer.py"
]
source = ["eventdetector_ts"]

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "eventdetector_ts"
version = "1.0.9"
description = "This package offers an implementation of the method outlined in the paper, Universal Event Detection in Time Series. It is designed to empower users to apply this method to their own datasets and tailor the detection process to meet their unique requirements."
keywords = ["Event Detection", "Time Series", "Universal Approximation Theory", "Deep Learning", "Stacking Ensemble Learning"]
authors = [
    { name = "Menouar Azib", email = "menouar.azib@akkodis.com" }
]

maintainers = [
    { name = "Menouar Azib", email = "menouar.azib@akkodis.com" }
]
requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3", "Operating System :: OS Independent"]

dependencies = [
    "joblib",
    "matplotlib",
    "numpy",
    "pandas",
    "python_dateutil",
    "scikit_learn",
    "scipy",
    "seaborn",
    "sympy",
    "colorlog",
    "pydot",
    "pyqt5",
    "tqdm"
]

[project.urls]
"Homepage" = "https://github.com/menouarazib/eventdetector"
"Bug Tracker" = "https://github.com/menouarazib/eventdetector/issues"