[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = [
    "eventdetector_ts/plotter/*",
    "eventdetector_ts/prediction/*",
    "eventdetector_ts/metamodel/*",
    "eventdetector_ts/optimization/event_extraction_pipeline.py",
    "eventdetector_ts/models/models_trainer.py"
]
source = ["eventdetector_ts"]

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "eventdetector_ts"
version = "1.1.0"
description = "EventDetector introduces a universal event detection method for multivariate time series. Unlike traditional deep-learning methods, it's regression-based, requiring only reference events. The robust stacked ensemble, from Feed-Forward Neural Networks to Transformers, ensures accuracy by mitigating biases. The package supports practical implementation, excelling in detecting events with precision, validated across diverse domains."
keywords = [
    "Universal Event Detection",
    "Multivariate Time Series",
    "Regression-based",
    "Stacked Ensemble Learning",
    "Deep Learning Models",
    "Feed-Forward Neural Networks",
    "Transformers",
    "Event Detection Package",
    "Rare Events",
    "Imbalanced Datasets",
    "Anomaly Detection",
    "Change Point Detection",
    "Fraud Detection",
    "Empirical Validations"
]
authors = [
    { name = "Menouar Azib", email = "menouar.azib@akkodis.com" }
]

maintainers = [
    { name = "Menouar Azib", email = "menouar.azib@akkodis.com" }
]
requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3", "Operating System :: OS Independent"]

dependencies = [
    "joblib",
    "matplotlib",
    "numpy",
    "pandas",
    "python_dateutil",
    "scikit_learn",
    "scipy",
    "seaborn",
    "sympy",
    "colorlog",
    "pydot",
    "pyqt5",
    "tqdm"
]

[project.urls]
"Homepage" = "https://github.com/menouarazib/eventdetector"
"Bug Tracker" = "https://github.com/menouarazib/eventdetector/issues"